--- a/gept_words_reflections.html
+++ b/gept_words_reflections.html
@@ -7,17 +7,42 @@
 <body>
 
     <h1>GEPT Words 單字測驗 ASP.NET 程式開發心得</h1>
-    作者：學號 姓名
+    作者：CBF11000宋長榮
 
 
     <h2>開發思路與解決方案</h2>
     在這裡，你可以描述你在開發過程中的思考過程，以及你如何解決問題的。
     <h3>開發過程</h3>
+    數據綁定：
+        確保DropDownList（CBF110009_DDL1）獲取並顯示測驗用的數據。
+        在CBF110009_testBtn_Click1事件中，確保正確設置下一個問題的初始狀態。
+    顯示提示和答案：
+        使用CBF110009_ch_hint來顯示提示。
+        使用CBF110009_input來接受用戶的答案。
+    遊戲邏輯：
+        在CBF110009_nextQBtn_Click事件中，確保處理用戶回答的邏輯。
+        在ShowNextQuestion方法中，設定下一個問題的初始狀態。
+    重播和結束：
+        在ReplayQuiz事件中，重置測驗，允許用戶重新開始。
+        在CBF110009_endBtn_Click事件中，可能執行結束測驗的相應處理。
+    錯誤處理：
+        考慮可能的錯誤情況，例如DropDownList中沒有單字可用，以確保用戶體驗的平滑性。
+        在CBF110009_GV1_RowDeleted事件中，確保在GridView行被刪除時，DropDownList重新綁定數據。
     <h3>解決策略</h3>
 
     <h2>使用的技術與引用來源</h2>
     在這裡，你可以列出你在開發過程中使用到的技術，以及你參考的資料來源。
     <h3>使用的技術</h3>
+    ASP.NET Session：
+        Session 物件用於在Web應用程序的多個請求之間保持用戶狀態。在這個例子中，Session 用於跟蹤測驗的進度和得分。
+    ASP.NET控制元件（DropDownList、GridView等）：
+        使用ASP.NET控制元件來構建用戶界面，例如 DropDownList 用於顯示單字列表，GridView 用於顯示和處理數據表。
+    資料繫結（Data Binding）：
+        使用ASP.NET的資料繫結機制將數據繫結到控制元件，例如在 CBF110009_DDL1 中顯示單字列表。
+    ASP.NET事件模型：
+        利用ASP.NET的事件模型處理用戶交互，例如按鈕點擊、下拉列表選擇等。在這個例子中，有各種按鈕點擊事件和下拉列表選擇事件。
+    SQL數據庫：
+        雖然程式碼中沒有直接展示，但它使用了一個 SqlDataSource 控制元件，這可能與SQL數據庫進行交互，用於獲取單字列表等數據。
     <h3>引用的資源</h3>
 
     <h2>遇到的問題與解決方法</h2>
@@ -32,7 +57,8 @@
 
     <h2>程式執行畫面</h2>
     在這裡，你可以分享你的程式執行畫面，並解釋每個畫面的功能。
-    <h3>功能介紹</h3>
+    <h3>功能介紹</h3
+                
     <h3>畫面展示</h3>
 
     <h2>個人心得與反思</h2>
